# fevo-takehome

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
fevo/: __init__.py  cache.py  exceptions.py  models.py  nasa.py  response.py  restclient.py  utils.py
tests/: test_nasa_client.py
