[tool.poetry]
name = "fevo-takehome"
version = "0.1.0"
description = ""
authors = ["baroncurtin2 <knowledge3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
python-dotenv = "^0.21.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = "true"
log_cli_level = "DEBUG"
